package com.edua.beeduasystem.service.auth;

import com.edua.beeduasystem.domain.exception.InvalidTokenException;
import com.edua.beeduasystem.domain.model.auth.AppUser;
import com.edua.beeduasystem.domain.model.auth.Role;
import com.edua.beeduasystem.repository.repositories.AppUserRepository;
import com.edua.beeduasystem.repository.repositories.UserRoleRepository;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import org.springframework.util.StringUtils;

import java.net.URI;
import java.time.LocalDate;
import java.util.Set;
import java.util.UUID;

@Service
public class ProfileService {
    private final AppUserRepository userRepository;
    private final UserRoleRepository userRoleRepository;
    private final CurrentUserProvider currentUserProvider;

    public ProfileService(AppUserRepository userRepository,
                          UserRoleRepository userRoleRepository,
                          CurrentUserProvider currentUserProvider) {
        this.userRepository = userRepository;
        this.userRoleRepository = userRoleRepository;
        this.currentUserProvider = currentUserProvider;
    }

    public record ProfileResult(AppUser user, Set<Role> roles) {
    }

    @Transactional
    public ProfileResult updateCurrentUserProfile(String fullName, String avatarUrl, String contactInfo,
                                                  String bio, String phoneNumber, LocalDate dateOfBirth) {
        UUID userId = currentUserProvider.requireUserId();
        AppUser user = userRepository.findById(userId)
                .orElseThrow(() -> new InvalidTokenException("User not found."));
        Set<Role> roles = userRoleRepository.findRolesByUserId(userId);
        boolean isStudent = roles.contains(Role.STUDENT);
        var normalizedDateOfBirth = roles.contains(Role.STUDENT)
                ? user.dateOfBirth()
                : AppUserFieldValidator.normalizeEducatorDateOfBirth(dateOfBirth);
        String normalizedPhoneNumber = isStudent
                ? user.phoneNumber()
                : AppUserFieldValidator.normalizeVietnamPhoneNumber(phoneNumber);

        AppUser updated = userRepository.save(new AppUser(
                user.id(),
                user.email(),
                user.googleSub(),
                normalizePatchValue(fullName, user.fullName(),
                        AppUserFieldValidator.MAX_FULL_NAME_LENGTH, "Full name"),
                normalizeAvatarUrl(avatarUrl, user.avatarUrl()),
                normalizePatchValue(contactInfo, user.contactInfo(),
                        AppUserFieldValidator.MAX_CONTACT_INFO_LENGTH, "Contact info"),
                normalizePatchValue(bio, user.bio(),
                        AppUserFieldValidator.MAX_BIO_LENGTH, "Bio"),
                normalizedPhoneNumber,
                user.subject(),
                user.status(),
                user.createdAt(),
                user.lastLoginAt(),
                normalizedDateOfBirth));
        return new ProfileResult(updated, roles);
    }

    private static String normalizePatchValue(String value, String currentValue, int maxLength, String fieldName) {
        if (value == null) {
            return currentValue;
        }
        String normalized = StringUtils.hasText(value) ? value.trim() : null;
        return AppUserFieldValidator.requireMaxLength(normalized, maxLength, fieldName);
    }

    private static String normalizeAvatarUrl(String value, String currentValue) {
        String normalized = normalizePatchValue(value, currentValue,
                AppUserFieldValidator.MAX_AVATAR_URL_LENGTH, "Avatar URL");
        if (normalized == null) {
            return null;
        }
        if (value == null) {
            return normalized;
        }
        try {
            URI uri = URI.create(normalized);
            String scheme = uri.getScheme();
            if (("http".equalsIgnoreCase(scheme) || "https".equalsIgnoreCase(scheme))
                    && StringUtils.hasText(uri.getHost())) {
                return normalized;
            }
        } catch (IllegalArgumentException ignored) {
        }
        throw new IllegalArgumentException("URL ảnh đại diện phải là URL http hoặc https hợp lệ.");
    }
}
